# greenlantern

./: .gitattributes  CITATION.cff  README.md  pyproject.toml  setup.py
demos/: barnes_fortney.py  gradients.py  spherical.py  versus_batman.py
src/greenlantern/: __init__.py
src/greenlantern/ext/: ellipsoid.c  ellipsoid_dual.c  greenlantern.c  greenlantern_context.c
src/greenlantern/ext/include/: .gitignore  greenlantern.h  greenlantern_context.h
src/greenlantern/ext/kernels/: ellipsoid.cl  ellipsoid_dual.cl  orbit.cl
