[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "numpy<2",
    "pocky @ git+https://github.com/emprice/pocky.git@main",
]

[project]
name = "greenlantern"
version = "1.0"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"greenlantern.ext" = ["include/*.h"]
